Type legibility fixes + mobile nav now works

--- a/style.css
+++ b/style.css
@@ -27,6 +27,28 @@ media (max-width: 390px) {
   }
 }
 
+a code {
+  color: #16c2ff;
+  text-decoration: none;
+}
+
+a:hover code {
+  color: #00afee;
+  text-decoration: none;
+}
+
+@media (max-width: 390px) {
+  a {
+    line-height: initial;
+  }
+  a code {
+    line-height: initial;
+  }
+  .nav ul li a {
+    line-height: 1.5em;
+  }
+}
+
 code.language-bash,
 code.language-ini,
 code.language-arc,
@@ -39,11 +61,11 @@ code {
   line-height: 1em;
   background:white;
   opacity: .7;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  padding-left: 5px;
-  padding-right: 5px;
-  color: #ff5858;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
+  color: #00c26e;
   border-radius: 5px;
 }
 
@@ -58,13 +80,15 @@ blockquote {
   margin: 0;
 }
 
-@media (max-width: 390px) {
-  header {
-    opacity: 0;
-  }
+hr {
+  border: 0;
+  background-color: #666;
+  height: 1px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-header {
+.nav {
   width: 170px;
   min-width: 170px;
   background: #333333;
@@ -73,26 +97,50 @@ header {
   height: 100%;
 }
 
-header ul {
+@media (max-width: 390px) {
+  .nav {
+    width: 100%;
+    position: relative;
+    height: initial;
+    padding-top: 20px;
+  }
+}
+
+h2 {
+  margin-top: 30px;
+}
+
+@media (max-width: 390px) {
+  h2 {
+    line-height: initial;
+  }
+}
+
+ul li {
+  line-height: 1.5em;
+}
+
+.nav ul {
   margin: 10px 10px;
   padding:0;
 }
 
-header ul ul {
+.nav ul ul {
   margin:0px;
 }
 
-header ul li {
+.nav ul li {
   list-style:none;  
   padding-left: 10px;
   padding-bottom: 5px;
+  line-height: 1.5em;
 }
 
-header ul ul li:last-child {
+.nav ul ul li:last-child {
   margin-bottom: 10px;
 }
 
-header ul a {
+.nav ul a {
   text-decoration: none;
   width: 100%;
   display: block;
@@ -100,28 +148,29 @@ header ul a {
   padding-bottom: 5px;
 }
 
-header ul a:hover {
+.nav ul a:hover {
   color: #00afee;
 }
 
-section>section {
+.content {
   margin-left: 200px;
   margin-right: 7%;
   padding: 20px 0 0 0;
+  float: left;
 }
 
 @media (max-width: 390px) {
-    section>section {
-         margin-left:7%;
-            margin-right: 7%;
-               padding: 20px 0 0 0;
-                }
-              }
+  .content {
+    margin-left: 7%;
+    margin-right: 7%;
+    padding: 20px 0 0 0;
+  }
+}
 
 section>section h1 {
   font-size: 3em;
   margin-top: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 /* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript */
 /**
@@ -175,7 +224,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 1em;
-	margin: .5em 0;
+	margin: .5em 0 1.5em 0;
 	overflow: auto;
 }
 
